--- a/src/styles/components/_import.scss
+++ b/src/styles/components/_import.scss
@@ -72,7 +72,7 @@
 // @import "../../../node_modules/uikit/src/scss/components/countdown.scss";
 
 // Utilities
-// @import "../../../node_modules/uikit/src/scss/components/animation.scss";
+@import "../../../node_modules/uikit/src/scss/components/animation.scss";
 @import "../../../node_modules/uikit/src/scss/components/width.scss";
 @import "../../../node_modules/uikit/src/scss/components/height.scss";
 @import "../../../node_modules/uikit/src/scss/components/text.scss";
