edits to cart and SEO

--- a/src/styles/components/_import.scss
+++ b/src/styles/components/_import.scss
@@ -24,7 +24,7 @@
 
 // Common
 @import "../../../node_modules/uikit/src/scss/components/close.scss"; // After: Icon
-// @import "../../../node_modules/uikit/src/scss/components/spinner.scss"; // After: Icon
+@import "../../../node_modules/uikit/src/scss/components/spinner.scss"; // After: Icon
 // @import "../../../node_modules/uikit/src/scss/components/totop.scss"; // After: Icon
 // @import "../../../node_modules/uikit/src/scss/components/marker.scss"; // After: Icon
 // @import "../../../node_modules/uikit/src/scss/components/alert.scss"; // After: Close
