--- a/src/styles/theme/_imports.scss
+++ b/src/styles/theme/_imports.scss
@@ -46,10 +46,11 @@
 // @import "../../../node_modules/uikit/src/scss/theme/thumbnav.scss";
 
 // JavaScript
-// @import "../../../node_modules/uikit/src/scss/theme/accordion.scss";
+@import "../../../node_modules/uikit/src/scss/theme/accordion.scss";
 @import "../../../node_modules/uikit/src/scss/theme/drop.scss";
 @import "../../../node_modules/uikit/src/scss/theme/dropdown.scss";
 // @import "../../../node_modules/uikit/src/scss/theme/modal.scss";
+@import "../../../node_modules/uikit/src/scss/components/switcher.scss";
 // @import "../../../node_modules/uikit/src/scss/theme/lightbox.scss";
 @import "../../../node_modules/uikit/src/scss/theme/sticky.scss";
 @import "../../../node_modules/uikit/src/scss/theme/offcanvas.scss";
