--- a/src/styles/theme/variables.scss
+++ b/src/styles/theme/variables.scss
@@ -1,13 +1,13 @@
 // Use ../node_modules/uikit/src/scss/variables.scss as guidelines
-$global-link-color: #56665F;
+$global-link-color: #869E96;
 $global-link-hover-color: #808080;
 $base-link-hover-text-decoration: none;
 $global-background: #FFFF;
 $global-primary-background: #BF9BA6;
 $global-secondary-background: #FFFF;
-$global-muted-background: #e1e9f0;
+$global-muted-background: #FFFF;
 
-$global-color: #56665F;
+$global-color: #6e6e6e;
 $global-muted-color: #808080;
 $base-heading-font-family: 'Stratford Serial', sans-serif;
 $base-body-font-family: 'Montserrat', sans-serif;
